src/gen/SMITHGrammarParser.java
// Generated from D:/UNALArchivo/Lenguajes de Programacion/SMITH/src/grammar\SMITHGrammar.g4 by ANTLR 4.12.0
package src.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SMITHGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, SEMICOLON=2, COMMA=3, DOT=4, EQUAL=5, PLUS=6, MINUS=7, TIMES=8, 
		DIVIDE=9, MOD=10, AND=11, OR=12, NOT=13, LESS=14, GREATER=15, LESS_EQUAL=16, 
		GREATER_EQUAL=17, EQUAL_EQUAL=18, NOT_EQUAL=19, ASSIGN=20, OPEN_PAREN=21, 
		CLOSE_PAREN=22, OPEN_BRACKET=23, CLOSE_BRACKET=24, OPEN_BRACE=25, CLOSE_BRACE=26, 
		INTEGER_LITERAL=27, FLOAT_LITERAL=28, STRING_LITERAL=29, BOOLEAN_LITERAL=30, 
		DECIDE=31, IF=32, IFNOT=33, DEFAULT=34, LOOP=35, REPEAT=36, UNTIL=37, 
		WHILE=38, FOR=39, EACH=40, IN=41, BLIND=42, DEFINE=43, INT=44, FLOAT=45, 
		ARRAY=46, NUMBER=47, STRING=48, BOOL=49, FUNCTION=50, TYPE=51, OUTPUT=52, 
		PRINT=53, PRINTLN=54, WRITEFILE=55, PLOT=56, INPUT=57, READFILE=58, READCONSOLE=59, 
		SET=60, PROB=61, DUNIFORM=62, DPOISSON=63, DBERNOULLI=64, DBINOMIAL=65, 
		DGEOMETRIC=66, PUNIFORM=67, PPOISSON=68, PBERNOULLI=69, PBINOMIAL=70, 
		PGEOMETRIC=71, RETURN=72, IDENTIFIER=73, WS=74, COMMENT=75, A=76, S=77;
	public static final int
		RULE_program = 0, RULE_atomictype = 1, RULE_variabletype = 2, RULE_numberliteral = 3, 
		RULE_decideblock = 4, RULE_decisionextension = 5, RULE_decideprefix = 6, 
		RULE_definestatement = 7, RULE_defineextension = 8, RULE_definedefaultvalue = 9, 
		RULE_arrayextension = 10, RULE_dimensions = 11, RULE_furtherdimensions = 12, 
		RULE_functiondefextension = 13, RULE_defineprefix = 14, RULE_loopblock = 15, 
		RULE_loopprefix = 16, RULE_loopextension = 17, RULE_repeattype = 18, RULE_forextension = 19, 
		RULE_rangeextension = 20, RULE_outputblock = 21, RULE_outputprefix = 22, 
		RULE_outputextension = 23, RULE_printtype = 24, RULE_statementbody = 25, 
		RULE_conditional = 26, RULE_functionblock = 27, RULE_functionarguments = 28, 
		RULE_arguments = 29, RULE_furtherarguments = 30, RULE_expression = 31, 
		RULE_expressionnc = 32, RULE_logicaloperator = 33, RULE_comparisonoperator = 34, 
		RULE_literal = 35, RULE_functioncall = 36, RULE_functioncallarguments = 37, 
		RULE_callarguments = 38, RULE_furthercallarguments = 39, RULE_returnstatement = 40, 
		RULE_block = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "atomictype", "variabletype", "numberliteral", "decideblock", 
			"decisionextension", "decideprefix", "definestatement", "defineextension", 
			"definedefaultvalue", "arrayextension", "dimensions", "furtherdimensions", 
			"functiondefextension", "defineprefix", "loopblock", "loopprefix", "loopextension", 
			"repeattype", "forextension", "rangeextension", "outputblock", "outputprefix", 
			"outputextension", "printtype", "statementbody", "conditional", "functionblock", 
			"functionarguments", "arguments", "furtherarguments", "expression", "expressionnc", 
			"logicaloperator", "comparisonoperator", "literal", "functioncall", "functioncallarguments", 
			"callarguments", "furthercallarguments", "returnstatement", "block"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "';'", "','", "'.'", "'='", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'&'", "'|'", "'!'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			"'as'", "'('", "')'", "'['", "']'", "'{'", "'}'", null, null, null, null, 
			"'decide'", "'if'", "'ifnot'", "'default'", "'loop'", "'repeat'", "'until'", 
			"'while'", "'for'", "'each'", "'in'", "'noiterator'", "'define'", "'int'", 
			"'float'", "'array'", null, "'string'", "'bool'", "'function'", "'type'", 
			"'output'", "'print'", "'println'", "'writefile'", "'plot'", "'input'", 
			"'readfile'", "'readconsole'", "'set'", "'prob'", "'duniform'", "'dpoisson'", 
			"'dbernoulli'", "'dbinomial'", "'dgeometric'", "'puniform'", "'ppoisson'", 
			"'pbernoulli'", "'pbinomial'", "'pgeometric'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "SEMICOLON", "COMMA", "DOT", "EQUAL", "PLUS", "MINUS", 
			"TIMES", "DIVIDE", "MOD", "AND", "OR", "NOT", "LESS", "GREATER", "LESS_EQUAL", 
			"GREATER_EQUAL", "EQUAL_EQUAL", "NOT_EQUAL", "ASSIGN", "OPEN_PAREN", 
			"CLOSE_PAREN", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_BRACE", "CLOSE_BRACE", 
			"INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
			"DECIDE", "IF", "IFNOT", "DEFAULT", "LOOP", "REPEAT", "UNTIL", "WHILE", 
			"FOR", "EACH", "IN", "BLIND", "DEFINE", "INT", "FLOAT", "ARRAY", "NUMBER", 
			"STRING", "BOOL", "FUNCTION", "TYPE", "OUTPUT", "PRINT", "PRINTLN", "WRITEFILE", 
			"PLOT", "INPUT", "READFILE", "READCONSOLE", "SET", "PROB", "DUNIFORM", 
			"DPOISSON", "DBERNOULLI", "DBINOMIAL", "DGEOMETRIC", "PUNIFORM", "PPOISSON", 
			"PBERNOULLI", "PBINOMIAL", "PGEOMETRIC", "RETURN", "IDENTIFIER", "WS", 
			"COMMENT", "A", "S"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SMITHGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SMITHGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SMITHGrammarParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			block();
			setState(85);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtomictypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(SMITHGrammarParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(SMITHGrammarParser.FLOAT, 0); }
		public TerminalNode BOOL() { return getToken(SMITHGrammarParser.BOOL, 0); }
		public TerminalNode STRING() { return getToken(SMITHGrammarParser.STRING, 0); }
		public AtomictypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomictype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterAtomictype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitAtomictype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitAtomictype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomictypeContext atomictype() throws RecognitionException {
		AtomictypeContext _localctx = new AtomictypeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_atomictype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 897201488265216L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariabletypeContext extends ParserRuleContext {
		public AtomictypeContext atomictype() {
			return getRuleContext(AtomictypeContext.class,0);
		}
		public VariabletypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variabletype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterVariabletype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitVariabletype(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitVariabletype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariabletypeContext variabletype() throws RecognitionException {
		VariabletypeContext _localctx = new VariabletypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variabletype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			atomictype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberliteralContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(SMITHGrammarParser.INTEGER_LITERAL, 0); }
		public TerminalNode FLOAT_LITERAL() { return getToken(SMITHGrammarParser.FLOAT_LITERAL, 0); }
		public NumberliteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberliteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterNumberliteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitNumberliteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitNumberliteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberliteralContext numberliteral() throws RecognitionException {
		NumberliteralContext _localctx = new NumberliteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numberliteral);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==INTEGER_LITERAL || _la==FLOAT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecideblockContext extends ParserRuleContext {
		public DecideprefixContext decideprefix() {
			return getRuleContext(DecideprefixContext.class,0);
		}
		public TerminalNode IF() { return getToken(SMITHGrammarParser.IF, 0); }
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public StatementbodyContext statementbody() {
			return getRuleContext(StatementbodyContext.class,0);
		}
		public DecisionextensionContext decisionextension() {
			return getRuleContext(DecisionextensionContext.class,0);
		}
		public DecideblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decideblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterDecideblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitDecideblock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitDecideblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecideblockContext decideblock() throws RecognitionException {
		DecideblockContext _localctx = new DecideblockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_decideblock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			decideprefix();
			setState(94);
			match(IF);
			setState(95);
			conditional();
			setState(96);
			statementbody();
			setState(97);
			decisionextension();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecisionextensionContext extends ParserRuleContext {
		public DecideprefixContext decideprefix() {
			return getRuleContext(DecideprefixContext.class,0);
		}
		public TerminalNode IFNOT() { return getToken(SMITHGrammarParser.IFNOT, 0); }
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public StatementbodyContext statementbody() {
			return getRuleContext(StatementbodyContext.class,0);
		}
		public DecisionextensionContext decisionextension() {
			return getRuleContext(DecisionextensionContext.class,0);
		}
		public TerminalNode DEFAULT() { return getToken(SMITHGrammarParser.DEFAULT, 0); }
		public DecisionextensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decisionextension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterDecisionextension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitDecisionextension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitDecisionextension(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecisionextensionContext decisionextension() throws RecognitionException {
		DecisionextensionContext _localctx = new DecisionextensionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_decisionextension);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				decideprefix();
				setState(100);
				match(IFNOT);
				setState(101);
				conditional();
				setState(102);
				statementbody();
				setState(103);
				decisionextension();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				decideprefix();
				setState(106);
				match(DEFAULT);
				setState(107);
				statementbody();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecideprefixContext extends ParserRuleContext {
		public TerminalNode DECIDE() { return getToken(SMITHGrammarParser.DECIDE, 0); }
		public TerminalNode COLON() { return getToken(SMITHGrammarParser.COLON, 0); }
		public DecideprefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decideprefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterDecideprefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitDecideprefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitDecideprefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecideprefixContext decideprefix() throws RecognitionException {
		DecideprefixContext _localctx = new DecideprefixContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decideprefix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(DECIDE);
			setState(113);
			match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinestatementContext extends ParserRuleContext {
		public DefineprefixContext defineprefix() {
			return getRuleContext(DefineprefixContext.class,0);
		}
		public DefineextensionContext defineextension() {
			return getRuleContext(DefineextensionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SMITHGrammarParser.SEMICOLON, 0); }
		public DefinestatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definestatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterDefinestatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitDefinestatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitDefinestatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinestatementContext definestatement() throws RecognitionException {
		DefinestatementContext _localctx = new DefinestatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definestatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			defineprefix();
			setState(116);
			defineextension();
			setState(117);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefineextensionContext extends ParserRuleContext {
		public AtomictypeContext atomictype() {
			return getRuleContext(AtomictypeContext.class,0);
		}
		public ArrayextensionContext arrayextension() {
			return getRuleContext(ArrayextensionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SMITHGrammarParser.IDENTIFIER, 0); }
		public DefinedefaultvalueContext definedefaultvalue() {
			return getRuleContext(DefinedefaultvalueContext.class,0);
		}
		public TerminalNode FUNCTION() { return getToken(SMITHGrammarParser.FUNCTION, 0); }
		public FunctiondefextensionContext functiondefextension() {
			return getRuleContext(FunctiondefextensionContext.class,0);
		}
		public FunctionblockContext functionblock() {
			return getRuleContext(FunctionblockContext.class,0);
		}
		public DefineextensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineextension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).enterDefineextension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SMITHGrammarListener ) ((SMITHGrammarListener)listener).exitDefineextension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SMITHGrammarVisitor ) return ((SMITHGrammarVisitor<? extends T>)visitor).visitDefineextension(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineextensionContext defineextension() throws RecognitionException {
		DefineextensionContext _localctx = new DefineextensionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_defineextension);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STRING:
			case BOOL:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				atomictype();
				setState(120);
				arrayextension();
				setState(121);
				match(IDENTIFIER);
				setState(122);
				definedefaultvalue();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				match(FUNCTION);
				setState(125);
				functiondefextension();
				setState(126);
				match(IDENTIFIER);
				setState(127);
				functionblock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
